--- a/package.json
+++ b/package.json
@@ -53,14 +53,13 @@
     "@stryker-mutator/typescript-checker": "^9.5.1",
     "@stryker-mutator/vitest-runner": "^9.5.1",
     "@types/node": "^25.2.3",
-    "@vitest/coverage-v8": "^4.0.18",
+    "@vitest/coverage-v8": "3.2.4",
     "esbuild": "^0.27.3",
-    "happy-dom": "^20.6.1",
     "tsup": "^8.5.1",
     "tsx": "^4.21.0",
     "typedoc": "^0.28.17",
     "typescript": "^5.9.3",
-    "vitest": "4.0.18"
+    "vitest": "3.2.4"
   },
   "repository": {
     "type": "git",
