--- a/package.json
+++ b/package.json
@@ -49,12 +49,14 @@
     "docs": "npx typedoc --entryPointStrategy Expand src"
   },
   "devDependencies": {
+    "@napi-rs/canvas": "^0.1.93",
     "@stryker-mutator/core": "^9.5.1",
     "@stryker-mutator/typescript-checker": "^9.5.1",
     "@stryker-mutator/vitest-runner": "^9.5.1",
     "@types/node": "^25.2.3",
     "@vitest/coverage-v8": "3.2.4",
     "esbuild": "^0.27.3",
+    "jsdom": "^28.1.0",
     "tsup": "^8.5.1",
     "tsx": "^4.21.0",
     "typedoc": "^0.28.17",
