--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "test": "vitest --coverage",
     "test:mutation": "stryker run",
     "docs": "npx typedoc --entryPointStrategy Expand src",
-    "check-exports": "tsx bin/check-exports.ts -- .test.ts .d.ts"
+    "check-exports": "tsx bin/check-exports.ts -- .test.ts .d.ts",
+    "bench": "npx vitest --project browser"
   },
   "devDependencies": {
     "@napi-rs/canvas": "^0.1.93",
@@ -55,9 +56,14 @@
     "@stryker-mutator/typescript-checker": "^9.5.1",
     "@stryker-mutator/vitest-runner": "^9.5.1",
     "@types/node": "^25.2.3",
+    "@vitest/browser": "3.2.4",
     "@vitest/coverage-v8": "3.2.4",
+    "console-table-printer": "^2.15.0",
     "esbuild": "^0.27.3",
     "jsdom": "^28.1.0",
+    "playwright": "^1.58.2",
+    "pretty-ms": "^9.3.0",
+    "tinybench": "^6.0.0",
     "tsup": "^8.5.1",
     "tsx": "^4.21.0",
     "typedoc": "^0.28.17",
