--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "tsup": "^8.5.1",
     "tsx": "^4.21.0",
     "typedoc": "^0.28.17",
+    "typedoc-plugin-mdn-links": "^5.1.1",
     "typedoc-rhineai-theme": "^1.2.0",
     "typescript": "^5.9.3",
     "vitest": "3.2.4"
@@ -77,8 +78,5 @@
   },
   "bugs": {
     "url": "https://github.com/unstoppablecarl/pixel-data-js/issues"
-  },
-  "dependencies": {
-    "typedoc-plugin-mdn-links": "^5.1.1"
   }
 }
