--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pixel-data-js",
   "type": "module",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "packageManager": "pnpm@10.30.0",
   "description": "JS Pixel and ImageData operations",
   "author": {
@@ -44,7 +44,7 @@
   ],
   "scripts": {
     "build": "tsup",
-    "test": "vitest --coverage",
+    "test": "vitest --coverage --project unit",
     "test:mutation": "stryker run",
     "docs": "npx typedoc --entryPointStrategy Expand src",
     "check-exports": "tsx bin/check-exports.ts -- .test.ts .d.ts",
