--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pixel-data-js",
   "type": "module",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "packageManager": "pnpm@10.30.0",
   "description": "JS Pixel and ImageData operations",
   "author": {
@@ -44,20 +44,31 @@
   ],
   "scripts": {
     "build": "tsup",
-    "test": "vitest --coverage",
+    "test": "vitest --coverage --project unit",
     "test:mutation": "stryker run",
-    "docs": "npx typedoc --entryPointStrategy Expand src"
+    "docs": "npx typedoc --entryPointStrategy Expand src",
+    "check-exports": "tsx bin/check-exports.ts -- .test.ts .d.ts",
+    "bench": "npx vitest --project browser"
   },
   "devDependencies": {
+    "@napi-rs/canvas": "^0.1.93",
     "@stryker-mutator/core": "^9.5.1",
     "@stryker-mutator/typescript-checker": "^9.5.1",
     "@stryker-mutator/vitest-runner": "^9.5.1",
     "@types/node": "^25.2.3",
+    "@vitest/browser": "3.2.4",
     "@vitest/coverage-v8": "3.2.4",
+    "console-table-printer": "^2.15.0",
     "esbuild": "^0.27.3",
+    "jsdom": "^28.1.0",
+    "playwright": "^1.58.2",
+    "pretty-ms": "^9.3.0",
+    "tinybench": "^6.0.0",
     "tsup": "^8.5.1",
     "tsx": "^4.21.0",
     "typedoc": "^0.28.17",
+    "typedoc-plugin-mdn-links": "^5.1.1",
+    "typedoc-rhineai-theme": "^1.2.0",
     "typescript": "^5.9.3",
     "vitest": "3.2.4"
   },
