--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pixel-data-js",
   "type": "module",
-  "version": "0.8.0",
+  "version": "0.9.0",
   "packageManager": "pnpm@10.30.0",
   "description": "JS Pixel and ImageData operations",
   "author": {
@@ -13,7 +13,10 @@
     "ImageData",
     "pixel",
     "blit",
-    "image"
+    "image",
+    "color",
+    "blend modes",
+    "color blend"
   ],
   "main": "./dist/index.prod.cjs",
   "module": "./dist/index.prod.js",
